# dungeonmaster-combat

./: .gitignore  CMakeLists.txt  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake  LICENSE  README.md  ai.cpp  ai.hpp  character.hpp  clean.sh  device.cpp  device.hpp  game.cpp  game.hpp  inputs.hpp  main.cpp  make.sh  material.hpp
assets/: .tileset1.png-autosave.kra  characters  enemies  map1  map3  map5  map_fortaleza  map_intestino  map_paredes  map_raffoul  materials
